feat: multi-version Fabric support for 1.20.x, 1.21.x, and 26.x